# AndroidAPIs_BenchmarkingApp

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/release/: app-release.apk
app/release/app-release/: AndroidManifest.xml  classes.dex  resources.arsc
app/release/app-release/res/drawable-v21/: design_password_eye.xml
app/release/app-release/res/layout/: abc_activity_chooser_view.xml  abc_activity_chooser_view_list_item.xml  abc_alert_dialog_button_bar_material.xml  abc_alert_dialog_material.xml  abc_alert_dialog_title_material.xml  abc_dialog_title_material.xml  abc_list_menu_item_layout.xml  abc_list_menu_item_radio.xml  abc_popup_menu_item_layout.xml  abc_search_view.xml  abc_select_dialog_material.xml  abc_tooltip.xml  activity_main.xml  content_main.xml  design_bottom_navigation_item.xml  design_bottom_sheet_dialog.xml  design_layout_snackbar_include.xml  design_navigation_item_header.xml  design_text_input_password_icon.xml  notification_template_big_media.xml  notification_template_big_media_custom.xml  notification_template_big_media_narrow.xml  notification_template_big_media_narrow_custom.xml  notification_template_custom_big.xml  notification_template_icon_group.xml  notification_template_lines_media.xml  notification_template_media.xml  notification_template_media_custom.xml  notification_template_part_time.xml
app/release/app-release/res/layout-v16/: design_bottom_sheet_dialog.xml  notification_template_custom_big.xml
app/release/app-release/res/layout-v17/: abc_alert_dialog_button_bar_material.xml  abc_alert_dialog_title_material.xml  abc_dialog_title_material.xml  abc_popup_menu_item_layout.xml  abc_search_view.xml  abc_select_dialog_material.xml  abc_tooltip.xml  design_layout_snackbar_include.xml  notification_template_big_media.xml  notification_template_big_media_custom.xml  notification_template_big_media_narrow.xml  notification_template_big_media_narrow_custom.xml  notification_template_custom_big.xml  notification_template_lines_media.xml  notification_template_media.xml  notification_template_media_custom.xml
app/release/app-release/res/layout-v21/: notification_template_custom_big.xml  notification_template_icon_group.xml
app/release/app-release/res/layout-v22/: abc_alert_dialog_button_bar_material.xml
app/release/app-release/res/layout-watch-v20/: abc_alert_dialog_title_material.xml
app/src/androidTest/java/com/example/lavoisier/test_tracer_app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/lavoisier/AndroidAPIs_BenchmarkingApp/: ApplicationContextProvider.java  BeningAPIsBenchmarkingActivity.java  DisplayMessageActivity.java  MainActivity.java  MaliciousAPIsBenchmarkingActivity.java  MyNativeActivity.java  OnClickListenerWithParameter.java  OpenGlActivity.java  OpenGlRendererExemple.java  SampleCarrierConfigService.java
app/src/main/res/drawable-v24/: border.xml
app/src/main/res/layout/: activity_bening_apis_benchmarking.xml  activity_display_message.xml  activity_listview.xml  activity_main.xml  activity_malicious_apis_benchmarking.xml  activity_my_native.xml  activity_open_gl.xml  content_bening_apis_benchmarking.xml  content_main.xml  content_malicious_apis_benchmarking.xml  content_my_native.xml  content_open_gl.xml  native_activity_display_message.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
